# snakemake-storage-plugin-openbis

./: pyproject.toml
.github/workflows/: release-please.yml
snakemake_storage_plugin_openbis/: __init__.py
snakemake_storage_plugin_openbis/openbis/: auth.py
tests/: tests.py
